tempfile/impl-trait-for-tuples/tests/ui/too_much_arguments_to_macro.stderr
error: Too many arguments given to the macro!
 --> tests/ui/too_much_arguments_to_macro.rs:1:1
  |
1 | #[impl_trait_for_tuples::impl_for_tuples(1, 2, 3)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `impl_trait_for_tuples::impl_for_tuples` (in Nightly builds, run with -Z macro-backtrace for more info)
